syntax = "proto3";

package grpcSkill;

service grpcSkill {
    rpc RegisterSkill(RegisterRequest) returns(RegisterResponse) {}
    rpc ProcessSkillRequest(ProcessRequest) returns(ProcessResponse) {}
}

message ProcessResponse {
    string ForwardAddress = 1;
    string SubsetID = 2;
}

message ProcessRequest {
    string Message = 1;
    string TransactionID = 2;
}

message SkillInfo {
    string ExampleText = 1;
    string GroupID = 2;
}

message RegisterRequest {
    string SkillName = 1;
    string SkillID = 2;
    repeated SkillInfo Examples = 3; 
    string ForwardAddress = 4;
    int32 ForwardType = 5;
}

message RegisterResponse {
    bool IsRegistered = 1;
}